added tests for changeUserRoles